--- a/index.html
+++ b/index.html
@@ -1,24 +1,22 @@
 <!DOCTYPE html>
 <html lang="ja">
+
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>和太鼓 武天 -BUTEN-</title>
-    <meta
-      name="description"
-      content="和太鼓 武天の公式サイトです。あきる野市、青梅市を中心に活動しています"
-    />
+    <meta name="description" content="和太鼓 武天の公式サイトです。あきる野市、青梅市を中心に活動しています" />
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@400;500;700&family=Noto+Serif+JP:wght@700&display=swap"
-      rel="stylesheet"
-    />
+      rel="stylesheet" />
     <link rel="stylesheet" href="./style.css" />
     <link rel="stylesheet" href="./home.css" />
   </head>
+
   <body>
     <!-- Loader -->
     <div id="loader">
@@ -33,13 +31,9 @@
     <div id="app">
       <header class="site-header">
         <div class="logo">
-           <img src="dist/logo_text.png">
+          <img src="dist/logo_text.png">
         </div>
-        <button
-          class="menu-toggle"
-          aria-label="メニューを開く"
-          aria-expanded="false"
-        >
+        <button class="menu-toggle" aria-label="メニューを開く" aria-expanded="false">
           <span class="bar"></span>
           <span class="bar"></span>
           <span class="bar"></span>
@@ -61,8 +55,8 @@
       <main>
         <section id="hero" class="hero">
           <div class="hero-slides">
-             <div class="slide active" style="background-image: url('dist/hero_bg.png')"></div>
-             <div class="slide" style="background-image: url('dist/hero_bg_2.png')"></div>
+            <div class="slide active" style="background-image: url('dist/hero_bg.png')"></div>
+            <div class="slide" style="background-image: url('dist/hero_bg_2.png')"></div>
           </div>
           <div class="hero-content">
             <h1>心に響く、<br />日本の音。</h1>
@@ -93,64 +87,64 @@
           <div class="container">
             <h2 class="section-title">クラス紹介</h2>
             <div class="class-grid">
-                    <div class="class-card">
-                        <div class="card-image">
-                            <img src="dist/kids_class.png" alt="子供たちが笑顔で太鼓を叩いている様子" loading="lazy">
-                        </div>
-                        <div class="card-content">
-                            <h3>キッズクラス</h3>
-                            <p>音とリズムで感性を育む。<br>礼儀作法も楽しく身につきます。</p>
-                        </div>
-                    </div>
-                    <div class="class-card">
-                        <div class="card-image">
-                            <img src="dist/hero_bg.png" alt="力強い太鼓の演奏" loading="lazy">
-                        </div>
-                        <div class="card-content">
-                            <h3>一般クラス</h3>
-                            <p>初心者から経験者まで。<br>全身を使って響かせる快感を。</p>
-                        </div>
-                    </div>
-                    <div class="class-card">
-                        <div class="card-image">
-                            <img src="dist/senior_class.png" alt="シニアの方々が楽しそうに太鼓を叩いている様子" loading="lazy">
-                        </div>
-                        <div class="card-content">
-                            <h3>シニア健康クラス</h3>
-                            <p>無理なく楽しく全身運動。<br>仲間と共に心も体もリフレッシュ。</p>
-                        </div>
-                    </div>
+              <div class="class-card">
+                <div class="card-image">
+                  <img src="dist/kids_class.png" alt="子供たちが笑顔で太鼓を叩いている様子" loading="lazy">
+                </div>
+                <div class="card-content">
+                  <h3><a href="class.html#kids">キッズクラス</a></h3>
+                  <p>音とリズムで感性を育む。<br>礼儀作法も楽しく身につきます。</p>
+                </div>
+              </div>
+              <div class="class-card">
+                <div class="card-image">
+                  <img src="dist/hero_bg.png" alt="力強い太鼓の演奏" loading="lazy">
+                </div>
+                <div class="card-content">
+                  <h3><a href="class.html#general">一般クラス</a></h3>
+                  <p>初心者から経験者まで。<br>全身を使って響かせる快感を。</p>
+                </div>
+              </div>
+              <div class="class-card">
+                <div class="card-image">
+                  <img src="dist/senior_class.png" alt="シニアの方々が楽しそうに太鼓を叩いている様子" loading="lazy">
+                </div>
+                <div class="card-content">
+                  <h3><a href="class.html#senior">シニア健康クラス</a></h3>
+                  <p>無理なく楽しく全身運動。<br>仲間と共に心も体もリフレッシュ。</p>
+                </div>
+              </div>
             </div>
           </div>
         </section>
 
         <section id="schedule" class="section-schedule">
-            <div class="container">
-                <h2 class="section-title">公演予定</h2>
-                <div class="schedule-list">
-                    <div class="schedule-item">
-                        <div class="schedule-date">2025.12.24</div>
-                        <div class="schedule-content">
-                            <h3>クリスマス太鼓ライブ</h3>
-                            <p>場所：市民会館ホール / 時間：18:00〜</p>
-                        </div>
-                    </div>
-                    <div class="schedule-item">
-                        <div class="schedule-date">2026.01.01</div>
-                        <div class="schedule-content">
-                            <h3>新春奉納演奏</h3>
-                            <p>場所：地元神社境内 / 時間：10:00〜</p>
-                        </div>
-                    </div>
-                     <div class="schedule-item">
-                        <div class="schedule-date">2026.03.15</div>
-                        <div class="schedule-content">
-                            <h3>春の合同発表会</h3>
-                            <p>場所：文化センター / 時間：13:00〜</p>
-                        </div>
-                    </div>
+          <div class="container">
+            <h2 class="section-title">公演予定</h2>
+            <div class="schedule-list">
+              <div class="schedule-item">
+                <div class="schedule-date">2025.12.24</div>
+                <div class="schedule-content">
+                  <h3><a href="schedule.html">クリスマス太鼓ライブ</a></h3>
+                  <p>場所：市民会館ホール / 時間：18:00〜</p>
                 </div>
+              </div>
+              <div class="schedule-item">
+                <div class="schedule-date">2026.01.01</div>
+                <div class="schedule-content">
+                  <h3><a href="schedule.html">新春奉納演奏</a></h3>
+                  <p>場所：地元神社境内 / 時間：10:00〜</p>
+                </div>
+              </div>
+              <div class="schedule-item">
+                <div class="schedule-date">2026.03.15</div>
+                <div class="schedule-content">
+                  <h3><a href="schedule.html">春の合同発表会</a></h3>
+                  <p>場所：文化センター / 時間：13:00〜</p>
+                </div>
+              </div>
             </div>
+          </div>
         </section>
 
 
@@ -160,21 +154,23 @@
             <h2 class="section-title">お問い合わせ</h2>
             <!-- Contact info -->
             <div class="contact-content">
-                <p>体験レッスンのお申し込み、ご質問はこちらからお気軽にどうぞ。</p>
-                <a href="tel:09012345678" class="phone">090-1234-5678</a>
-                <p>受付時間: 9:00 - 18:00 (月〜土)</p>
-                <div class="form-placeholder" style="margin-top: 20px;">
-                   <a href="contact.html" class="cta-button" style="background-color: white; color: var(--color-accent);">メールフォームへ</a>
-                </div>
+              <p>体験レッスンのお申し込み、ご質問はこちらからお気軽にどうぞ。</p>
+              <a href="tel:09012345678" class="phone">090-1234-5678</a>
+              <p>受付時間: 9:00 - 18:00 (月〜土)</p>
+              <div class="form-placeholder" style="margin-top: 20px;">
+                <a href="contact.html" class="cta-button"
+                  style="background-color: white; color: var(--color-accent);">メールフォームへ</a>
+              </div>
             </div>
           </div>
         </section>
       </main>
 
       <footer class="site-footer">
-        <p>&copy; 2025 和太鼓教室 響 -HIBIKI-</p>
+        <p>&copy; 2025 和太鼓 武天 -BUTEN-</p>
       </footer>
     </div>
     <script type="module" src="./main.js"></script>
   </body>
+
 </html>
