--- a/contact.html
+++ b/contact.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="ja">
+
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
@@ -11,11 +12,11 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@400;500;700&family=Noto+Serif+JP:wght@700&display=swap"
-      rel="stylesheet"
-    />
+      rel="stylesheet" />
     <link rel="stylesheet" href="./style.css" />
     <link rel="stylesheet" href="./contact.css" />
   </head>
+
   <body>
     <!-- Loader -->
     <div id="loader">
@@ -30,15 +31,11 @@
     <div id="app">
       <header class="site-header">
         <div class="logo">
-           <a href="index.html">
-             <img src="dist/logo_text.png" alt="和太鼓 武天 -BUTEN-">
-           </a>
+          <a href="index.html">
+            <img src="dist/logo_text.png" alt="和太鼓 武天 -BUTEN-">
+          </a>
         </div>
-        <button
-          class="menu-toggle"
-          aria-label="メニューを開く"
-          aria-expanded="false"
-        >
+        <button class="menu-toggle" aria-label="メニューを開く" aria-expanded="false">
           <span class="bar"></span>
           <span class="bar"></span>
           <span class="bar"></span>
@@ -59,59 +56,73 @@
 
       <main>
         <section class="page-header" style="background-image: url('dist/hero_bg.png');">
-            <div class="header-overlay"></div>
-            <h1>お問い合わせ</h1>
-            <p>Contact</p>
+          <div class="header-overlay"></div>
+          <h1>お問い合わせ</h1>
+          <p>Contact</p>
         </section>
 
         <section class="section-contact-form">
-            <div class="container">
-                <p class="contact-intro">体験レッスンのお申し込み、演奏のご依頼、その他ご質問など、<br class="desktop-only">お気軽にお問い合わせください。</p>
-                
-                <form class="contact-form" action="#" method="post">
-                    <div class="form-group">
-                        <label for="name">お名前 <span class="required">必須</span></label>
-                        <input type="text" id="name" name="name" required placeholder="例：山田 太郎">
-                    </div>
+          <div class="container">
+            <p class="contact-intro">体験レッスンのお申し込み、演奏のご依頼、その他ご質問など、<br class="desktop-only">お気軽にお問い合わせください。</p>
 
-                    <div class="form-group">
-                        <label for="email">メールアドレス <span class="required">必須</span></label>
-                        <input type="email" id="email" name="email" required placeholder="例：yamada@example.com">
-                    </div>
+            <form class="contact-form" action="#" method="post">
+              <div class="form-group">
+                <label for="name">お名前 <span class="required">必須</span></label>
+                <input type="text" id="name" name="name" required placeholder="例：山田 太郎">
+              </div>
 
-                    <div class="form-group">
-                        <label for="tel">電話番号</label>
-                        <input type="tel" id="tel" name="tel" placeholder="例：090-1234-5678">
-                    </div>
+              <div class="form-group">
+                <label for="email">メールアドレス <span class="required">必須</span></label>
+                <input type="email" id="email" name="email" required placeholder="例：yamada@example.com">
+              </div>
 
-                    <div class="form-group">
-                        <label for="subject">件名 <span class="required">必須</span></label>
-                        <select id="subject" name="subject" required>
-                            <option value="">選択してください</option>
-                            <option value="trial">体験レッスンのお申し込み</option>
-                            <option value="performance">演奏のご依頼</option>
-                            <option value="question">ご質問・その他</option>
-                        </select>
-                    </div>
+              <div class="form-group">
+                <label for="tel">電話番号</label>
+                <input type="tel" id="tel" name="tel" placeholder="例：090-1234-5678">
+              </div>
 
-                    <div class="form-group">
-                        <label for="message">お問い合わせ内容 <span class="required">必須</span></label>
-                        <textarea id="message" name="message" rows="6" required placeholder="お問い合わせ内容をご記入ください"></textarea>
-                    </div>
+              <div class="form-group">
+                <label for="subject">件名 <span class="required">必須</span></label>
+                <select id="subject" name="subject" required>
+                  <option value="">選択してください</option>
+                  <option value="trial">体験レッスンのお申し込み</option>
+                  <option value="performance">演奏のご依頼</option>
+                  <option value="question">ご質問・その他</option>
+                </select>
+              </div>
 
-                    <div class="form-actions">
-                        <button type="submit" class="cta-button">送信する</button>
-                    </div>
-                </form>
-            </div>
+              <div class="form-group">
+                <label for="message">お問い合わせ内容 <span class="required">必須</span></label>
+                <textarea id="message" name="message" rows="6" required placeholder="お問い合わせ内容をご記入ください"></textarea>
+              </div>
+
+              <div class="form-actions">
+                <button type="submit" class="cta-button">送信する</button>
+              </div>
+            </form>
+          </div>
         </section>
 
       </main>
 
       <footer class="site-footer">
+        <div class="social-links">
+          <a href="#" class="social-icon" aria-label="Instagram">
+            <img src="dist/Instagram_Glyph_Gradient.png" alt="Instagram">
+          </a>
+          <a href="#" class="social-icon" aria-label="Facebook">
+            <img src="dist/Facebook_Logo_Primary.png" alt="Facebook">
+          </a>
+          <!-- YouTube placeholder
+          <a href="#" class="social-icon" aria-label="YouTube">
+            <img src="dist/youtube_logo.png" alt="YouTube">
+          </a>
+          -->
+        </div>
         <p>&copy; 2025 和太鼓 武天 -BUTEN-</p>
       </footer>
     </div>
     <script type="module" src="./main.js"></script>
   </body>
+
 </html>
