--- a/access.html
+++ b/access.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="ja">
+
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
@@ -11,11 +12,11 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@400;500;700&family=Noto+Serif+JP:wght@700&display=swap"
-      rel="stylesheet"
-    />
+      rel="stylesheet" />
     <link rel="stylesheet" href="./style.css" />
     <link rel="stylesheet" href="./access.css" />
   </head>
+
   <body>
     <!-- Loader -->
     <div id="loader">
@@ -30,15 +31,11 @@
     <div id="app">
       <header class="site-header">
         <div class="logo">
-           <a href="index.html">
-             <img src="dist/logo_text.png" alt="和太鼓 武天 -BUTEN-">
-           </a>
+          <a href="index.html">
+            <img src="dist/logo_text.png" alt="和太鼓 武天 -BUTEN-">
+          </a>
         </div>
-        <button
-          class="menu-toggle"
-          aria-label="メニューを開く"
-          aria-expanded="false"
-        >
+        <button class="menu-toggle" aria-label="メニューを開く" aria-expanded="false">
           <span class="bar"></span>
           <span class="bar"></span>
           <span class="bar"></span>
@@ -59,63 +56,76 @@
 
       <main>
         <section class="page-header" style="background-image: url('dist/hero_bg.png');">
-            <div class="header-overlay"></div>
-            <h1>アクセス</h1>
-            <p>Access</p>
+          <div class="header-overlay"></div>
+          <h1>アクセス</h1>
+          <p>Access</p>
         </section>
 
         <section class="section-access-detail">
-            <div class="container">
-                <div class="access-container">
-                    <div class="map-area">
-                        <img src="./access_map.png" alt="教室周辺地図" class="access-map-img">
-                        <p class="map-caption">※詳細な位置はGoogle Map等をご確認ください。</p>
-                    </div>
-                    
-                    <div class="access-info">
-                        <div class="info-block">
-                            <h3><span class="icon">📍</span> 住所</h3>
-                            <p>〒190-0164<br>東京都あきる野市五日市 123-4<br>武天道場</p>
-                        </div>
+          <div class="container">
+            <div class="access-container">
+              <div class="map-area">
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1633.224427802856!2d139.31658585380825!3d35.72067050071823!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x60191f5a41d5e7bf%3A0x2c1e1840a556c8d2!2z5bCP5bed5Lya6aSo!5e0!3m2!1sja!2sjp!4v1762834675865!5m2!1sja!2sjp" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+              </div>
 
-                        <div class="info-block">
-                            <h3><span class="icon">🚃</span> 電車でお越しの方</h3>
-                            <p>JR五日市線「武蔵五日市駅」より徒歩10分</p>
-                        </div>
-
-                        <div class="info-block">
-                            <h3><span class="icon">🚗</span> お車でお越しの方</h3>
-                            <p>圏央道「あきる野IC」より約15分<br>※専用駐車場 5台完備</p>
-                        </div>
-
-                        <div class="info-block">
-                            <h3><span class="icon">🚌</span> バスでお越しの方</h3>
-                            <p>西東京バス「五日市高校」バス停より徒歩3分</p>
-                        </div>
-                    </div>
+              <div class="access-info">
+                <div class="info-block">
+                  <h3><span class="icon">📍</span> 住所</h3>
+                  <p>〒190-0164<br>東京都あきる野市五日市 123-4<br>武天道場</p>
                 </div>
+
+                <div class="info-block">
+                  <h3><span class="icon">🚃</span> 電車でお越しの方</h3>
+                  <p>JR五日市線「武蔵五日市駅」より徒歩10分</p>
+                </div>
+
+                <div class="info-block">
+                  <h3><span class="icon">🚗</span> お車でお越しの方</h3>
+                  <p>圏央道「あきる野IC」より約15分<br>※専用駐車場 5台完備</p>
+                </div>
+
+                <div class="info-block">
+                  <h3><span class="icon">🚌</span> バスでお越しの方</h3>
+                  <p>西東京バス「五日市高校」バス停より徒歩3分</p>
+                </div>
+              </div>
             </div>
+          </div>
         </section>
 
         <section id="contact" class="section-contact">
           <div class="container">
             <h2 class="section-title">お問い合わせ</h2>
             <div class="contact-content">
-                <p>体験レッスンのお申し込み、ご質問はこちらからお気軽にどうぞ。</p>
-                <a href="tel:09012345678" class="phone">090-1234-5678</a>
-                <p>受付時間: 9:00 - 18:00 (月〜土)</p>
-                <div class="form-placeholder" style="margin-top: 20px;">
-                   <a href="#" class="cta-button" style="background-color: white; color: var(--color-accent);">メールフォームへ</a>
-                </div>
+              <p>体験レッスンのお申し込み、ご質問はこちらからお気軽にどうぞ。</p>
+              <a href="tel:09012345678" class="phone">090-1234-5678</a>
+              <p>受付時間: 9:00 - 18:00 (月〜土)</p>
+              <div class="form-placeholder" style="margin-top: 20px;">
+                <a href="#" class="cta-button" style="background-color: white; color: var(--color-accent);">メールフォームへ</a>
+              </div>
             </div>
           </div>
         </section>
       </main>
 
       <footer class="site-footer">
+        <div class="social-links">
+          <a href="#" class="social-icon" aria-label="Instagram">
+            <img src="dist/Instagram_Glyph_Gradient.png" alt="Instagram">
+          </a>
+          <a href="#" class="social-icon" aria-label="Facebook">
+            <img src="dist/Facebook_Logo_Primary.png" alt="Facebook">
+          </a>
+          <!-- YouTube placeholder
+          <a href="#" class="social-icon" aria-label="YouTube">
+            <img src="dist/youtube_logo.png" alt="YouTube">
+          </a>
+          -->
+        </div>
         <p>&copy; 2025 和太鼓 武天 -BUTEN-</p>
       </footer>
     </div>
     <script type="module" src="./main.js"></script>
   </body>
+
 </html>
