--- a/index.html
+++ b/index.html
@@ -167,6 +167,19 @@
       </main>
 
       <footer class="site-footer">
+        <div class="social-links">
+          <a href="#" class="social-icon" aria-label="Instagram">
+            <img src="dist/Instagram_Glyph_Gradient.png" alt="Instagram">
+          </a>
+          <a href="#" class="social-icon" aria-label="Facebook">
+            <img src="dist/Facebook_Logo_Primary.png" alt="Facebook">
+          </a>
+          <!-- YouTube placeholder
+          <a href="#" class="social-icon" aria-label="YouTube">
+            <img src="dist/youtube_logo.png" alt="YouTube">
+          </a>
+          -->
+        </div>
         <p>&copy; 2025 和太鼓 武天 -BUTEN-</p>
       </footer>
     </div>
