--- a/schedule.html
+++ b/schedule.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="ja">
+
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
@@ -11,11 +12,11 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@400;500;700&family=Noto+Serif+JP:wght@700&display=swap"
-      rel="stylesheet"
-    />
+      rel="stylesheet" />
     <link rel="stylesheet" href="./style.css" />
     <link rel="stylesheet" href="./schedule.css" />
   </head>
+
   <body>
     <!-- Loader -->
     <div id="loader">
@@ -30,15 +31,11 @@
     <div id="app">
       <header class="site-header">
         <div class="logo">
-           <a href="index.html">
-             <img src="dist/logo_text.png" alt="和太鼓 武天 -BUTEN-">
-           </a>
+          <a href="index.html">
+            <img src="dist/logo_text.png" alt="和太鼓 武天 -BUTEN-">
+          </a>
         </div>
-        <button
-          class="menu-toggle"
-          aria-label="メニューを開く"
-          aria-expanded="false"
-        >
+        <button class="menu-toggle" aria-label="メニューを開く" aria-expanded="false">
           <span class="bar"></span>
           <span class="bar"></span>
           <span class="bar"></span>
@@ -59,96 +56,110 @@
 
       <main>
         <section class="page-header" style="background-image: url('dist/hero_bg_2.png');">
-            <div class="header-overlay"></div>
-            <h1>公演予定</h1>
-            <p>Schedule</p>
+          <div class="header-overlay"></div>
+          <h1>公演予定</h1>
+          <p>Schedule</p>
         </section>
 
         <section class="section-schedule-list">
-            <div class="container">
-                <div class="schedule-filters">
-                    <button class="filter-btn active">すべて</button>
-                    <button class="filter-btn">2025年</button>
-                    <button class="filter-btn">2024年</button>
-                </div>
-
-                <div class="detailed-schedule-list">
-                    <!-- Events -->
-                    <article class="schedule-card">
-                        <div class="schedule-date-box">
-                            <span class="year">2025</span>
-                            <span class="date">08.15</span>
-                            <span class="day">Fri</span>
-                        </div>
-                        <div class="schedule-info">
-                            <h2 class="schedule-title">第10回 武天 定期演奏会 「響 -HIBIKI-」</h2>
-                            <p class="schedule-location"><span class="icon">📍</span> あきる野市市民文化ホール</p>
-                            <p class="schedule-time"><span class="icon">🕒</span> 開場 13:30 / 開演 14:00</p>
-                            <p class="schedule-desc">
-                                結成10周年を記念する特別公演。新作「風林火山」の初演を含む、2時間のフルステージ。
-                                力強い音色と洗練されたパフォーマンスをお届けします。
-                            </p>
-                            <a href="contact.html?subject=performance" class="ticket-btn">チケット予約について</a>
-                        </div>
-                    </article>
-
-                    <article class="schedule-card">
-                        <div class="schedule-date-box">
-                            <span class="year">2025</span>
-                            <span class="date">05.05</span>
-                            <span class="day">Mon</span>
-                        </div>
-                        <div class="schedule-info">
-                            <h2 class="schedule-title">あきる野 新緑祭り 出演</h2>
-                            <p class="schedule-location"><span class="icon">📍</span> 秋川渓谷広場 特設ステージ</p>
-                            <p class="schedule-time"><span class="icon">🕒</span> 出演予定 11:30〜</p>
-                            <p class="schedule-desc">
-                                地元の春のお祭りに参加します。キッズクラスの子供たちも元気いっぱいに演奏します！
-                                観覧無料ですので、ぜひ応援に来てください。
-                            </p>
-                        </div>
-                    </article>
-
-                    <article class="schedule-card past">
-                        <div class="schedule-date-box">
-                            <span class="year">2024</span>
-                            <span class="date">12.31</span>
-                            <span class="day">Tue</span>
-                        </div>
-                        <div class="schedule-info">
-                            <h2 class="schedule-title">大晦日 奉納太鼓</h2>
-                            <p class="schedule-location"><span class="icon">📍</span> 武蔵五日市 神社境内</p>
-                            <p class="schedule-time"><span class="icon">🕒</span> 23:45〜</p>
-                            <p class="schedule-desc">
-                                一年の感謝と新年の平安を願い、年越しの太鼓を奉納いたします。
-                            </p>
-                        </div>
-                    </article>
-                    
-                     <article class="schedule-card past">
-                        <div class="schedule-date-box">
-                            <span class="year">2024</span>
-                            <span class="date">10.20</span>
-                            <span class="day">Sun</span>
-                        </div>
-                        <div class="schedule-info">
-                            <h2 class="schedule-title">地域交流文化祭</h2>
-                            <p class="schedule-location"><span class="icon">📍</span> 五日市地域交流センター</p>
-                            <p class="schedule-desc">
-                                地域の皆様との交流を目的とした文化祭に出演しました。
-                            </p>
-                        </div>
-                    </article>
-                </div>
+          <div class="container">
+            <div class="schedule-filters">
+              <button class="filter-btn active">すべて</button>
+              <button class="filter-btn">2025年</button>
+              <button class="filter-btn">2024年</button>
             </div>
+
+            <div class="detailed-schedule-list">
+              <!-- Events -->
+              <article class="schedule-card">
+                <div class="schedule-date-box">
+                  <span class="year">2025</span>
+                  <span class="date">08.15</span>
+                  <span class="day">Fri</span>
+                </div>
+                <div class="schedule-info">
+                  <h2 class="schedule-title">第10回 武天 定期演奏会 「響 -HIBIKI-」</h2>
+                  <p class="schedule-location"><span class="icon">📍</span> あきる野市市民文化ホール</p>
+                  <p class="schedule-time"><span class="icon">🕒</span> 開場 13:30 / 開演 14:00</p>
+                  <p class="schedule-desc">
+                    結成10周年を記念する特別公演。新作「風林火山」の初演を含む、2時間のフルステージ。
+                    力強い音色と洗練されたパフォーマンスをお届けします。
+                  </p>
+                  <a href="contact.html?subject=performance" class="ticket-btn">チケット予約について</a>
+                </div>
+              </article>
+
+              <article class="schedule-card">
+                <div class="schedule-date-box">
+                  <span class="year">2025</span>
+                  <span class="date">05.05</span>
+                  <span class="day">Mon</span>
+                </div>
+                <div class="schedule-info">
+                  <h2 class="schedule-title">あきる野 新緑祭り 出演</h2>
+                  <p class="schedule-location"><span class="icon">📍</span> 秋川渓谷広場 特設ステージ</p>
+                  <p class="schedule-time"><span class="icon">🕒</span> 出演予定 11:30〜</p>
+                  <p class="schedule-desc">
+                    地元の春のお祭りに参加します。キッズクラスの子供たちも元気いっぱいに演奏します！
+                    観覧無料ですので、ぜひ応援に来てください。
+                  </p>
+                </div>
+              </article>
+
+              <article class="schedule-card past">
+                <div class="schedule-date-box">
+                  <span class="year">2024</span>
+                  <span class="date">12.31</span>
+                  <span class="day">Tue</span>
+                </div>
+                <div class="schedule-info">
+                  <h2 class="schedule-title">大晦日 奉納太鼓</h2>
+                  <p class="schedule-location"><span class="icon">📍</span> 武蔵五日市 神社境内</p>
+                  <p class="schedule-time"><span class="icon">🕒</span> 23:45〜</p>
+                  <p class="schedule-desc">
+                    一年の感謝と新年の平安を願い、年越しの太鼓を奉納いたします。
+                  </p>
+                </div>
+              </article>
+
+              <article class="schedule-card past">
+                <div class="schedule-date-box">
+                  <span class="year">2024</span>
+                  <span class="date">10.20</span>
+                  <span class="day">Sun</span>
+                </div>
+                <div class="schedule-info">
+                  <h2 class="schedule-title">地域交流文化祭</h2>
+                  <p class="schedule-location"><span class="icon">📍</span> 五日市地域交流センター</p>
+                  <p class="schedule-desc">
+                    地域の皆様との交流を目的とした文化祭に出演しました。
+                  </p>
+                </div>
+              </article>
+            </div>
+          </div>
         </section>
 
       </main>
 
       <footer class="site-footer">
+        <div class="social-links">
+          <a href="#" class="social-icon" aria-label="Instagram">
+            <img src="dist/Instagram_Glyph_Gradient.png" alt="Instagram">
+          </a>
+          <a href="#" class="social-icon" aria-label="Facebook">
+            <img src="dist/Facebook_Logo_Primary.png" alt="Facebook">
+          </a>
+          <!-- YouTube placeholder
+          <a href="#" class="social-icon" aria-label="YouTube">
+            <img src="dist/youtube_logo.png" alt="YouTube">
+          </a>
+          -->
+        </div>
         <p>&copy; 2025 和太鼓 武天 -BUTEN-</p>
       </footer>
     </div>
     <script type="module" src="./main.js"></script>
   </body>
+
 </html>
