--- a/access.html
+++ b/access.html
@@ -71,22 +71,22 @@
               <div class="access-info">
                 <div class="info-block">
                   <h3><span class="icon">📍</span> 住所</h3>
-                  <p>〒190-0164<br>東京都あきる野市五日市 123-4<br>武天道場</p>
+                  <p>〒190-0821<br>東京都あきる野市小川 638-1<br>小川会館</p>
                 </div>
 
                 <div class="info-block">
                   <h3><span class="icon">🚃</span> 電車でお越しの方</h3>
-                  <p>JR五日市線「武蔵五日市駅」より徒歩10分</p>
+                  <p>JR五日市線「東秋留駅」より徒歩15分</p>
                 </div>
 
                 <div class="info-block">
                   <h3><span class="icon">🚗</span> お車でお越しの方</h3>
-                  <p>圏央道「あきる野IC」より約15分<br>※専用駐車場 5台完備</p>
+                  <p>圏央道「あきる野IC」より約15分<br>※専用駐車場 あり</p>
                 </div>
 
                 <div class="info-block">
                   <h3><span class="icon">🚌</span> バスでお越しの方</h3>
-                  <p>西東京バス「五日市高校」バス停より徒歩3分</p>
+                  <p>西東京バス「小川」バス停より徒歩3分</p>
                 </div>
               </div>
             </div>
