--- a/admission.html
+++ b/admission.html
@@ -107,16 +107,15 @@
               <h2 class="section-title">体験レッスンについて</h2>
               <dl class="trial-details">
                 <dt>体験料</dt>
-                <dd class="price">1,000円 <span class="tax">(税込)</span> <br><span class="note">※当日ご入会の方は無料になります！</span>
+                <dd class="price">500円 <span class="tax">(税込)</span> <br><span class="note"></span>
                 </dd>
 
                 <dt>開催日時</dt>
                 <dd>
                   <p>通常のクラス開講時間に随時受け付けております。</p>
                   <ul class="time-list">
-                    <li><strong>火・金</strong>: 17:00〜 (キッズ), 19:00〜 (一般)</li>
-                    <li><strong>土</strong>: 10:00〜 (シニア), 13:00〜 (一般)</li>
-                    <li><strong>日</strong>: 9:00〜 (親子・キッズ)</li>
+                    <li><strong>火</strong>: 18:00〜 (一般)</li>
+                    <li><strong>土</strong>: 15:00〜 (親子・キッズ)</li>
                   </ul>
                   <a href="class.html" class="link-text">クラス詳細・スケジュールはこちら &gt;</a>
                 </dd>
