--- a/class.html
+++ b/class.html
@@ -70,7 +70,7 @@
                 <img src="dist/kids_class.png" alt="キッズクラス" loading="lazy">
               </div>
               <div class="detail-content">
-                <h2>キッズクラス</h2>
+                <h2>福来竜</h2>
                 <span class="tag">対象：小学生〜中学生</span>
                 <p class="description">
                   リズム感や体力を養うだけでなく、大きな声を出し、仲間と音を合わせることで協調性や礼儀作法も身につきます。
@@ -79,11 +79,9 @@
                 <div class="class-info">
                   <dl>
                     <dt>練習日時</dt>
-                    <dd>毎週 水曜日 17:00 - 18:00</dd>
-                    <dt>月謝</dt>
-                    <dd>¥6,000 (税込)</dd>
-                    <dt>定員</dt>
-                    <dd>15名</dd>
+                    <dd>毎週 土曜日 15:00 - 18:00</dd>
+                    <dt>代表曲</dt>
+                    <dd>御天<br>陽楽<br>天のマーチ</dd>
                   </dl>
                 </div>
               </div>
@@ -95,7 +93,7 @@
                 <img src="dist/hero_bg.png" alt="一般クラス" loading="lazy">
               </div>
               <div class="detail-content">
-                <h2>一般クラス</h2>
+                <h2>舞華蝶</h2>
                 <span class="tag">対象：高校生以上（初心者歓迎）</span>
                 <p class="description">
                   和太鼓の基礎から応用までを学びます。
@@ -105,11 +103,9 @@
                 <div class="class-info">
                   <dl>
                     <dt>練習日時</dt>
-                    <dd>毎週 土曜日 19:00 - 20:30</dd>
-                    <dt>月謝</dt>
-                    <dd>¥8,000 (税込)</dd>
-                    <dt>定員</dt>
-                    <dd>20名</dd>
+                    <dd>毎週 火曜日 18:00 - 20:00</dd>
+                    <dt>代表曲</dt>
+                    <dd>華空<br>胡蝶蘭<br>舞華蝶</dd>
                   </dl>
                 </div>
               </div>
@@ -121,7 +117,7 @@
                 <img src="dist/senior_class.png" alt="シニア健康クラス" loading="lazy">
               </div>
               <div class="detail-content">
-                <h2>シニア健康クラス</h2>
+                <h2>十夜叉</h2>
                 <span class="tag">対象：60歳以上</span>
                 <p class="description">
                   無理のない動きで、楽しく体を動かすことを目的としたクラスです。
@@ -131,11 +127,9 @@
                 <div class="class-info">
                   <dl>
                     <dt>練習日時</dt>
-                    <dd>毎週 木曜日 10:00 - 11:30</dd>
-                    <dt>月謝</dt>
-                    <dd>¥5,000 (税込)</dd>
-                    <dt>定員</dt>
-                    <dd>15名</dd>
+                    <dd>毎週 火曜日 19:00 - 21:00</dd>
+                    <dt>代表曲</dt>
+                    <dd>Sword<br>巴々切<br>宴舞</dd>
                   </dl>
                 </div>
               </div>
