--- a/index.html
+++ b/index.html
@@ -55,8 +55,17 @@
       <main>
         <section id="hero" class="hero">
           <div class="hero-slides">
-            <div class="slide active" style="background-image: url('dist/hero_bg.png')"></div>
-            <div class="slide" style="background-image: url('dist/hero_bg_2.png')"></div>
+            <div class="slide active" style="background-image: url('dist/slideshow/slideshow1.jpg')"></div>
+            <div class="slide" style="background-image: url('dist/slideshow/slideshow3.jpeg')"></div>
+            <div class="slide" style="background-image: url('dist/slideshow/slideshow4.jpg')"></div>
+            <div class="slide" style="background-image: url('dist/slideshow/slideshow5.jpg')"></div>
+            <div class="slide" style="background-image: url('dist/slideshow/slideshow6.jpg')"></div>
+            <div class="slide" style="background-image: url('dist/slideshow/slideshow7.png')"></div>
+            <div class="slide" style="background-image: url('dist/slideshow/slideshow8.jpg')"></div>
+            <div class="slide" style="background-image: url('dist/slideshow/slideshow10.jpg')"></div>
+            <div class="slide" style="background-image: url('dist/slideshow/slideshow11.jpg')"></div>
+            <div class="slide" style="background-image: url('dist/slideshow/slideshow12.jpg')"></div>
+            <div class="slide" style="background-image: url('dist/slideshow/slideshow13.jpg')"></div>
           </div>
           <div class="hero-content">
             <h1>心に響く、<br />日本の音。</h1>
@@ -68,16 +77,11 @@
 
         <section id="concept" class="section-concept">
           <div class="container">
-            <h2 class="section-title">教室の想い</h2>
+            <h2 class="section-title">和太鼓 武天</h2>
             <p class="concept-text">
-              太鼓の音は、命の鼓動。<br />
-              「響 -HIBIKI-」は、和太鼓を通じて<br />
-              心と体を健康にし、<br />
-              世代を超えた交流を生む場所です。<br />
-              <br />
-              初めての方も、運動が苦手な方も、<br />
-              安心してバチを握ってください。<br />
-              あなたの「響き」がここにあります。
+              和太鼓 武天（わだいこ ぶてん）は、東京都あきる野市を拠点に活動する和太鼓グループです。<br >
+              2007年の結成以来、地域の祭りやイベントでの演奏を中心に、和太鼓の魅力を広める活動を行っています。<br>
+              初心者から経験者まで幅広い年齢層が参加しており、和太鼓を通じて地域の絆を深めています。
             </p>
           </div>
         </section>
@@ -92,8 +96,8 @@
                   <img src="dist/kids_class.png" alt="子供たちが笑顔で太鼓を叩いている様子" loading="lazy">
                 </div>
                 <div class="card-content">
-                  <h3><a href="class.html#kids">キッズクラス</a></h3>
-                  <p>音とリズムで感性を育む。<br>礼儀作法も楽しく身につきます。</p>
+                  <h3><a href="class.html#kids">福来竜</a></h3>
+                  <p>元気いっぱいかわいい子供たちが活躍する親子チーム<br>明るく活発な兄弟・親子で楽しむ太鼓で幸せになろう</p>
                 </div>
               </div>
               <div class="class-card">
@@ -101,8 +105,8 @@
                   <img src="dist/hero_bg.png" alt="力強い太鼓の演奏" loading="lazy">
                 </div>
                 <div class="card-content">
-                  <h3><a href="class.html#general">一般クラス</a></h3>
-                  <p>初心者から経験者まで。<br>全身を使って響かせる快感を。</p>
+                  <h3><a href="class.html#general">舞華蝶</a></h3>
+                  <p>優雅に華やかな演奏を目指す大人チーム<br>女性が多いのが特徴</p>
                 </div>
               </div>
               <div class="class-card">
@@ -110,8 +114,8 @@
                   <img src="dist/senior_class.png" alt="シニアの方々が楽しそうに太鼓を叩いている様子" loading="lazy">
                 </div>
                 <div class="card-content">
-                  <h3><a href="class.html#senior">シニア健康クラス</a></h3>
-                  <p>無理なく楽しく全身運動。<br>仲間と共に心も体もリフレッシュ。</p>
+                  <h3><a href="class.html#senior">十夜叉</a></h3>
+                  <p>武天を代表する若者10人がコンセプトエネルギッシュ、かつアグレッシブな打ち込みで魅了<br></p>
                 </div>
               </div>
             </div>
@@ -123,10 +127,10 @@
             <h2 class="section-title">公演予定</h2>
             <div class="schedule-list">
               <div class="schedule-item">
-                <div class="schedule-date">2025.12.24</div>
+                <div class="schedule-date">2025.4.5</div>
                 <div class="schedule-content">
-                  <h3><a href="schedule.html">クリスマス太鼓ライブ</a></h3>
-                  <p>場所：市民会館ホール / 時間：18:00〜</p>
+                  <h3><a href="schedule.html">武天 発表会</a></h3>
+                  <p>場所：ふれあいホール / 時間：15:00〜</p>
                 </div>
               </div>
               <div class="schedule-item">
@@ -137,10 +141,10 @@
                 </div>
               </div>
               <div class="schedule-item">
-                <div class="schedule-date">2026.03.15</div>
+                <div class="schedule-date">2026.01.31</div>
                 <div class="schedule-content">
-                  <h3><a href="schedule.html">春の合同発表会</a></h3>
-                  <p>場所：文化センター / 時間：13:00〜</p>
+                  <h3><a href="schedule.html">武天 発表会</a></h3>
+                  <p>場所：キララホール / 時間：13:00〜</p>
                 </div>
               </div>
             </div>
