--- a/instructors.html
+++ b/instructors.html
@@ -70,8 +70,8 @@
                 <img src="./instructor_main.png" alt="代表講師">
               </div>
               <div class="instructor-content">
-                <h2>代表講師 <span class="name">武宮 天心</span></h2>
-                <p class="instructor-role">TENSHIN TAKEMIYA</p>
+                <h2>指導者 <span class="name">栗原 清美</span></h2>
+                <p class="instructor-role">KIYOMI KURIHARA</p>
                 <p class="instructor-bio">
                   15歳で和太鼓に出会い、プロ和太鼓奏者として国内外で活躍。
                   「和太鼓の響きで心を一つに」を理念に、2008年に「和太鼓 武天」を設立。
@@ -87,44 +87,44 @@
               <!-- Assistant 1 -->
               <div class="class-card instructor-card">
                 <div class="card-image instructor-card-image">
-                  <img src="./assistant_1.png" alt="指導員 佐藤">
+                  <img src="public/m_kurihara.jpg" alt="指導員 栗原">
                 </div>
                 <div class="card-content">
-                  <h3>佐藤 花子</h3>
-                  <p class="instructor-sub">HANAKO SATO</p>
+                  <h3>栗原 政宗</h3>
+                  <p class="instructor-sub">MASAMUNE KURIHARA</p>
                   <p>キッズクラス担当。明るい笑顔と丁寧な指導で子供たちに大人気。「太鼓を通じて挨拶や礼儀も楽しく身につけましょう！」</p>
                 </div>
               </div>
               <!-- Assistant 2 -->
               <div class="class-card instructor-card">
                 <div class="card-image instructor-card-image">
-                  <img src="./assistant_2.png" alt="指導員 鈴木">
+                  <img src="public/r_mimura.jpg" alt="指導員 美村">
                 </div>
                 <div class="card-content">
-                  <h3>鈴木 一郎</h3>
-                  <p class="instructor-sub">ICHIRO SUZUKI</p>
+                  <h3>美村 綾香</h3>
+                  <p class="instructor-sub">AYAKA MIMURA</p>
                   <p>一般クラス担当。パワフルな演奏が持ち味。基礎からしっかり学びたい方のサポートを全力で行います。</p>
                 </div>
               </div>
               <!-- Assistant 3 -->
               <div class="class-card instructor-card">
                 <div class="card-image instructor-card-image">
-                  <img src="./assistant_1.png" alt="指導員 高橋">
+                  <img src="public/r_mimura.jpg" alt="指導員 美村">
                 </div>
                 <div class="card-content">
-                  <h3>高橋 優子</h3>
-                  <p class="instructor-sub">YUKO TAKAHASHI</p>
+                  <h3>美村 涼太</h3>
+                  <p class="instructor-sub">RYOTA MIMURA</p>
                   <p>シニアクラス担当。理学療法士の経験を活かし、体に負担の少ない打ち方を指導します。健康維持に最適です。</p>
                 </div>
               </div>
               <!-- Assistant 4 -->
               <div class="class-card instructor-card">
                 <div class="card-image instructor-card-image">
-                  <img src="./assistant_2.png" alt="指導員 田中">
+                  <img src="public/kawakubo.jpg" alt="指導員 川久保">
                 </div>
                 <div class="card-content">
-                  <h3>田中 健太</h3>
-                  <p class="instructor-sub">KENTA TANAKA</p>
+                  <h3>川久保 諒</h3>
+                  <p class="instructor-sub">RYO KAWAMOTO</p>
                   <p>全クラスのアシスタントを担当。祭囃子が得意。初心者の方のリズム練習を優しくサポートします。</p>
                 </div>
               </div>
