--- a/schedule.html
+++ b/schedule.html
@@ -65,77 +65,45 @@
           <div class="container">
             <div class="schedule-filters">
               <button class="filter-btn active">すべて</button>
+              <button class="filter-btn">2026年</button>
               <button class="filter-btn">2025年</button>
-              <button class="filter-btn">2024年</button>
             </div>
 
             <div class="detailed-schedule-list">
               <!-- Events -->
               <article class="schedule-card">
                 <div class="schedule-date-box">
-                  <span class="year">2025</span>
-                  <span class="date">08.15</span>
-                  <span class="day">Fri</span>
+                  <span class="year">2026</span>
+                  <span class="date">04.05</span>
+                  <span class="day">Sun</span>
                 </div>
                 <div class="schedule-info">
-                  <h2 class="schedule-title">第10回 武天 定期演奏会 「響 -HIBIKI-」</h2>
-                  <p class="schedule-location"><span class="icon">📍</span> あきる野市市民文化ホール</p>
+                  <h2 class="schedule-title">武天 発表会</h2>
+                  <p class="schedule-location"><span class="icon">📍</span> あきる野市ふれあいホール</p>
                   <p class="schedule-time"><span class="icon">🕒</span> 開場 13:30 / 開演 14:00</p>
                   <p class="schedule-desc">
-                    結成10周年を記念する特別公演。新作「風林火山」の初演を含む、2時間のフルステージ。
-                    力強い音色と洗練されたパフォーマンスをお届けします。
+                    武天の発表会です
                   </p>
                   <a href="contact.html?subject=performance" class="ticket-btn">チケット予約について</a>
                 </div>
               </article>
 
-              <article class="schedule-card">
+              <article class="schedule-card past">
                 <div class="schedule-date-box">
                   <span class="year">2025</span>
-                  <span class="date">05.05</span>
-                  <span class="day">Mon</span>
-                </div>
-                <div class="schedule-info">
-                  <h2 class="schedule-title">あきる野 新緑祭り 出演</h2>
-                  <p class="schedule-location"><span class="icon">📍</span> 秋川渓谷広場 特設ステージ</p>
-                  <p class="schedule-time"><span class="icon">🕒</span> 出演予定 11:30〜</p>
-                  <p class="schedule-desc">
-                    地元の春のお祭りに参加します。キッズクラスの子供たちも元気いっぱいに演奏します！
-                    観覧無料ですので、ぜひ応援に来てください。
-                  </p>
-                </div>
-              </article>
-
-              <article class="schedule-card past">
-                <div class="schedule-date-box">
-                  <span class="year">2024</span>
-                  <span class="date">12.31</span>
-                  <span class="day">Tue</span>
-                </div>
-                <div class="schedule-info">
-                  <h2 class="schedule-title">大晦日 奉納太鼓</h2>
-                  <p class="schedule-location"><span class="icon">📍</span> 武蔵五日市 神社境内</p>
-                  <p class="schedule-time"><span class="icon">🕒</span> 23:45〜</p>
-                  <p class="schedule-desc">
-                    一年の感謝と新年の平安を願い、年越しの太鼓を奉納いたします。
-                  </p>
-                </div>
-              </article>
-
-              <article class="schedule-card past">
-                <div class="schedule-date-box">
-                  <span class="year">2024</span>
-                  <span class="date">10.20</span>
+                  <span class="date">04.27</span>
                   <span class="day">Sun</span>
                 </div>
                 <div class="schedule-info">
-                  <h2 class="schedule-title">地域交流文化祭</h2>
-                  <p class="schedule-location"><span class="icon">📍</span> 五日市地域交流センター</p>
+                  <h2 class="schedule-title">合同公演 「奏音」</h2>
+                  <p class="schedule-location"><span class="icon">📍</span> キララホール</p>
+                  <p class="schedule-time"><span class="icon">🕒</span> 開場 13:45 / 開演 14:00</p>
                   <p class="schedule-desc">
-                    地域の皆様との交流を目的とした文化祭に出演しました。
+                    「野辺囃子神楽保存会」との合同公演です。ゲストに「Eriu2&6」さんをお招きして、コラボ曲も披露します。
                   </p>
                 </div>
               </article>
+              
             </div>
           </div>
         </section>
