紹介文修正

--- a/access.html
+++ b/access.html
@@ -111,14 +111,14 @@
       <footer class="site-footer">
         <div class="social-links">
           <a href="#" class="social-icon" aria-label="Instagram">
-            <img src="dist/Instagram_Glyph_Gradient.png" alt="Instagram">
+            <img src="public/Instagram_Glyph_Gradient.png" alt="Instagram">
           </a>
           <a href="#" class="social-icon" aria-label="Facebook">
-            <img src="dist/Facebook_Logo_Primary.png" alt="Facebook">
+            <img src="public/Facebook_Logo_Primary.png" alt="Facebook">
           </a>
           <!-- YouTube placeholder
           <a href="#" class="social-icon" aria-label="YouTube">
-            <img src="dist/youtube_logo.png" alt="YouTube">
+            <img src="public/youtube_logo.png" alt="YouTube">
           </a>
           -->
         </div>
