--- a/instructors.html
+++ b/instructors.html
@@ -73,11 +73,7 @@
                 <h2>指導者 <span class="name">栗原 清美</span></h2>
                 <p class="instructor-role">KIYOMI KURIHARA</p>
                 <p class="instructor-bio">
-                  15歳で和太鼓に出会い、プロ和太鼓奏者として国内外で活躍。
-                  「和太鼓の響きで心を一つに」を理念に、2008年に「和太鼓 武天」を設立。
-                  技術だけでなく、礼節や心の在り方を伝える指導には定評がある。
-                  <br><br>
-                  「太鼓は自分の心を映す鏡です。上手く叩こうとするより、まずは楽しんで、自分の音を響かせてください。」
+                  紹介文
                 </p>
               </div>
             </div>
@@ -92,7 +88,7 @@
                 <div class="card-content">
                   <h3>栗原 政宗</h3>
                   <p class="instructor-sub">MASAMUNE KURIHARA</p>
-                  <p>キッズクラス担当。明るい笑顔と丁寧な指導で子供たちに大人気。「太鼓を通じて挨拶や礼儀も楽しく身につけましょう！」</p>
+                  <p>紹介文</p>
                 </div>
               </div>
               <!-- Assistant 2 -->
@@ -103,7 +99,7 @@
                 <div class="card-content">
                   <h3>美村 綾香</h3>
                   <p class="instructor-sub">AYAKA MIMURA</p>
-                  <p>一般クラス担当。パワフルな演奏が持ち味。基礎からしっかり学びたい方のサポートを全力で行います。</p>
+                  <p>紹介文</p>
                 </div>
               </div>
               <!-- Assistant 3 -->
@@ -114,7 +110,7 @@
                 <div class="card-content">
                   <h3>美村 涼太</h3>
                   <p class="instructor-sub">RYOTA MIMURA</p>
-                  <p>シニアクラス担当。理学療法士の経験を活かし、体に負担の少ない打ち方を指導します。健康維持に最適です。</p>
+                  <p>紹介文</p>
                 </div>
               </div>
               <!-- Assistant 4 -->
@@ -125,7 +121,7 @@
                 <div class="card-content">
                   <h3>川久保 諒</h3>
                   <p class="instructor-sub">RYO KAWAMOTO</p>
-                  <p>全クラスのアシスタントを担当。祭囃子が得意。初心者の方のリズム練習を優しくサポートします。</p>
+                  <p>紹介文</p>
                 </div>
               </div>
             </div>
@@ -151,14 +147,14 @@
       <footer class="site-footer">
         <div class="social-links">
           <a href="#" class="social-icon" aria-label="Instagram">
-            <img src="dist/Instagram_Glyph_Gradient.png" alt="Instagram">
+            <img src="public/Instagram_Glyph_Gradient.png" alt="Instagram">
           </a>
           <a href="#" class="social-icon" aria-label="Facebook">
-            <img src="dist/Facebook_Logo_Primary.png" alt="Facebook">
+            <img src="public/Facebook_Logo_Primary.png" alt="Facebook">
           </a>
           <!-- YouTube placeholder
           <a href="#" class="social-icon" aria-label="YouTube">
-            <img src="dist/youtube_logo.png" alt="YouTube">
+            <img src="public/youtube_logo.png" alt="YouTube">
           </a>
           -->
         </div>
