バックエンド追加

--- a/admission.html
+++ b/admission.html
@@ -70,7 +70,7 @@
                 <div class="step-number">01</div>
                 <div class="step-content">
                   <h3>お申し込み</h3>
-                  <p>まずは<a href="contact.html">お問い合わせフォーム</a>またはお電話にて、体験レッスンをお申し込みください。ご希望の日時やクラスをお伺いします。</p>
+                  <p>まずは<a href="contact.html">お問い合わせフォーム</a>にて、体験レッスンをお申し込みください。ご希望の日時やクラスをお伺いします。</p>
                 </div>
               </div>
               <div class="step-connector"></div>
