--- a/index.html
+++ b/index.html
@@ -159,9 +159,8 @@
             <!-- Contact info -->
             <div class="contact-content">
               <p>体験レッスンのお申し込み、ご質問はこちらからお気軽にどうぞ。</p>
-              <a href="tel:09012345678" class="phone">090-1234-5678</a>
-              <p>受付時間: 9:00 - 18:00 (月〜土)</p>
-              <div class="form-placeholder" style="margin-top: 20px;">
+
+              <div class="form-placeholder">
                 <a href="contact.html" class="cta-button"
                   style="background-color: white; color: var(--color-accent);">メールフォームへ</a>
               </div>
@@ -173,14 +172,14 @@
       <footer class="site-footer">
         <div class="social-links">
           <a href="#" class="social-icon" aria-label="Instagram">
-            <img src="dist/Instagram_Glyph_Gradient.png" alt="Instagram">
+            <img src="public/Instagram_Glyph_Gradient.png" alt="Instagram">
           </a>
           <a href="#" class="social-icon" aria-label="Facebook">
-            <img src="dist/Facebook_Logo_Primary.png" alt="Facebook">
+            <img src="public/Facebook_Logo_Primary.png" alt="Facebook">
           </a>
           <!-- YouTube placeholder
           <a href="#" class="social-icon" aria-label="YouTube">
-            <img src="dist/youtube_logo.png" alt="YouTube">
+            <img src="public/youtube_logo.png" alt="YouTube">
           </a>
           -->
         </div>
