--- a/instructors.html
+++ b/instructors.html
@@ -94,7 +94,7 @@
               <!-- Assistant 2 -->
               <div class="class-card instructor-card">
                 <div class="card-image instructor-card-image">
-                  <img src="public/r_mimura.jpg" alt="指導員 美村">
+                  <img src="public/a_mimura.jpg" alt="指導員 美村">
                 </div>
                 <div class="card-content">
                   <h3>美村 綾香</h3>
@@ -134,9 +134,8 @@
             <h2 class="section-title">お問い合わせ</h2>
             <div class="contact-content">
               <p>体験レッスンのお申し込み、ご質問はこちらからお気軽にどうぞ。</p>
-              <a href="tel:09012345678" class="phone">090-1234-5678</a>
-              <p>受付時間: 9:00 - 18:00 (月〜土)</p>
-              <div class="form-placeholder" style="margin-top: 20px;">
+
+              <div class="form-placeholder">
                 <a href="#" class="cta-button" style="background-color: white; color: var(--color-accent);">メールフォームへ</a>
               </div>
             </div>
