--- a/schedule.html
+++ b/schedule.html
@@ -108,6 +108,19 @@
           </div>
         </section>
 
+        <section id="contact" class="section-contact">
+          <div class="container">
+            <h2 class="section-title">お問い合わせ</h2>
+            <div class="contact-content">
+              <p>体験レッスンのお申し込み、ご質問はこちらからお気軽にどうぞ。</p>
+
+              <div class="form-placeholder">
+                <a href="#" class="cta-button" style="background-color: white; color: var(--color-accent);">メールフォームへ</a>
+              </div>
+            </div>
+          </div>
+        </section>
+
       </main>
 
       <footer class="site-footer">
